# Shooting_For_The_Stars

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  msi_setup.py  pyproject.toml  setup.cfg  setup.py
projectSS/: entities.py  game.py  gameplayscreen.py  gamescreen.py  main.py  menu.py  menus.py  minigame.py  spritesheet.py
