[metadata]
name = Shooting_For_The_Stars
version = 1.0
license = MIT
author = Luan Tran, Daniel Brodbeck, Jose Lopez, Elizaveta Vlasova, Calvin Yang
author_email = ltran3@ufl.edu, dbrodbeck@ufl.edu, joselopez7693@ufl.edu, vlasovae@ufl.edu, cyang2@ufl.edu
url = https://github.com/Andytr13/Shooting_For_The_Stars
description = A 2D rhythm-based vertical platformer video game.
classifiers =
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.8",
        "Operating System :: Microsoft :: Windows :: Windows 10",
        "Topic :: Software Development :: Libraries :: pygame",
        "Topic :: Games/Entertainment"

[options]
packages = find:
python_requires = >= 3.8, <4
install_requires =
    pygame
Include_package_data = True

[options.entry_points]
console_scripts =
    SFTS = projectSS.main:main